[package]
name = "wgslirpy"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/vi/wgslirpy"
license = "MIT/Apache-2.0"
description = "User-space Wireguard to internet router, like SLiRP, but with Wireguard instead of PPP"
categories = ["network-programming", "command-line-utilities"]
keywords = ["wireguard","onetun","slirp","nat"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
argh = "0.1.10"
base64 = "0.21.2"
boringtun = "0.6.0"
bytes = "1.4.0"
hashbrown = "0.14.0"
hex = "0.4.3"
simple-dns = "0.5.3"
smoltcp = { version = "0.10.0", default-features = false, features = ["socket", "socket-tcp", "socket-udp", "std", "proto-ipv4", "proto-ipv4-fragmentation", "proto-ipv6", "fragmentation-buffer-size-65536", "assembler-max-segment-count-32", "log", "medium-ip"] }
tokio = { version = "1.29.1", features = ["rt", "net", "sync", "macros", "io-util", "time"] }
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", optional=true}

[features]
default = ["tracing-subscriber", "tracing/release_max_level_debug"]
