[package]
name = "wgslirpy"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/vi/wgslirpy"
license = "MIT/Apache-2.0"
description = "User-space Wireguard to internet router, like SLiRP, but with Wireguard instead of PPP"
categories = ["network-programming", "command-line-utilities"]
keywords = ["wireguard","onetun","slirp","nat"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
argh = "0.1.10"
tokio = { version = "1.29.1", features = ["rt",  "macros"] }
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", optional=true}
libwgslirpy = {version = "0.2.0", path="crates/libwgslirpy"}

[features]
default = ["tracing-subscriber", "tracing/release_max_level_debug"]

[workspace]
members = ["crates/*"]
